chaged media query to fix text overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,11 +102,11 @@ padding: 0px;
       font-size: 3vw;
         background-color: rgba(0, 0, 0, 0.39);
     }
-    /* -----media queries to make font readable on larger devives but not too big on mobile ----*/
-    @media screen and (max-width: 600px) {
-    .storysomm p {font-size: 4.8vw}
+    /* media queries to make font readable on larger devives but not too big on mobile  */
+     @media screen and (max-width: 560px) { 
+     .storysomm p {font-size: 4.8vw} 
     }
 
    @media screen and (min-width: 600px) {
     .storysomm h2{font-size: 5vw}
-    }
+     } 
